{
    "about": "About",
    "about_text": "NightDream Games\nDeveloper - Damien Pirotte\nVisual identity - Ellia Walrave\nTesting - Louis Colbus",
    "@about_text": {
        "description": "Do not translate names, keep formatting and line breaks",
        "type": "text"
    },
    "add": "Add",
    "add_group": "Add group",
    "add_subject": "Add subject",
    "add_subjects": "Add subjects",
    "add_test": "Add test",
    "app_name": "Graded",
    "app_version": "App version",
    "appearance": "Appearance",
    "average": "Average",
    "az": "A-Z",
    "basic": "Basic",
    "bonus": "Bonus:",
    "cancel": "Cancel",
    "change_class": "Change class",
    "change_class_summary": "Click to change your current class. This will delete all your saved grades.",
    "class_string": "Class",
    "classic": "Classic",
    "coefficient": "Coefficient",
    "coefficient_dots": "Coefficient:",
    "coefficients": "Coefficients",
    "coming_soon": "Coming soon",
    "confirm": "Confirm",
    "confirm_delete": "Are you sure you want to delete all your saved grades?",
    "contact": "Contact us",
    "custom": "Custom",
    "custom_rating_system": "Custom rating system",
    "default_string": "Default",
    "delete": "Delete",
    "down": "Down",
    "edit": "Edit",
    "edit_group": "Edit group",
    "edit_subject": "Edit subject",
    "edit_subjects": "Edit subjects",
    "edit_subjects_summary": "Click to edit your subjects",
    "edit_test": "Edit test",
    "email": "contact@nightdreamgames.com",
    "@email": {
        "description": "Do not translate",
        "type": "text"
    },
    "english": "English",
    "@english": {
        "description": "Do not translate",
        "type": "text"
    },
    "enter_unique": "Enter a unique name",
    "exam": "Exam",
    "exams": "Exams",
    "french": "Français",
    "@french": {
        "description": "Do not translate",
        "type": "text"
    },
    "general": "General",
    "german": "Deutsch",
    "@german": {
        "description": "Do not translate",
        "type": "text"
    },
    "github": "GitHub repository",
    "github_summary": "https://github.com/NightDreamGames/Graded",
    "@github_summary": {
        "description": "Do not translate",
        "type": "text"
    },
    "grade": "Grade",
    "grades": "Grades",
    "group": "Group",
    "half_down": "Half down",
    "@half_down": {
        "description": "Rounding half down",
        "type": "text"
    },
    "half_up": "Half up",
    "@half_up": {
        "description": "Rounding half up",
        "type": "text"
    },
    "invalid": "Invalid",
    "language": "Language",
    "licenses": "Licenses",
    "lux_system": "Luxembourgish school system",
    "maximum": "Maximum",
    "more_options": "More options",
    "name": "Name",
    "next": "Next",
    "no": "No",
    "not_set": "Not set",
    "note": "Note:",
    "note_text": "You can always edit your subjects and other options in the settings later",
    "ok": "OK",
    "open": "Open",
    "other_school_system": "Other school system",
    "previous": "Previous",
    "rating_system": "Rating system",
    "reset": "Reset Grades",
    "reset_summary": "Delete all saved grades and reset app",
    "round_to": "Round to",
    "rounding_mode": "Rounding mode",
    "save": "Save",
    "school_system": "School system",
    "section": "Section",
    "section_classic_a": "A - Languages",
    "section_classic_b": "B - Mathematics",
    "section_classic_c": "C - Natural sciences",
    "section_classic_d": "D - Economics",
    "section_classic_e": "E - Art",
    "section_classic_f": "F - Music",
    "section_classic_g": "G - Human & social sciences",
    "section_classic_i": "I - Informatics & Communication",
    "select_school_term": "Select school term",
    "semester": "Semester",
    "semesters": "Semesters",
    "settings": "Settings",
    "setup": "Setup",
    "sort_by": "Sort by",
    "storage_error": "There was an error loading your saved data, so it has been deleted.",
    "subject": "Subject",
    "system": "System",
    "system_language": "System language",
    "school_term": "School term",
    "test": "Test",
    "theme": "Theme",
    "theme_dark": "Dark",
    "theme_light": "Light",
    "theme_system": "System (recommended)",
    "to_100th": "To 100-th",
    "to_10th": "To 10-th",
    "to_integer": "To integer",
    "trimester": "Trimester",
    "trimesters": "Trimesters",
    "up": "Up",
    "variant": "Variant",
    "year": "Year",
    "year_overview": "Year overview",
    "yearly_average": "Yearly average",
    "yes": "Yes",
    "language_code": "es",
    "@language_code": {
        "description": "ISO 639-1 code of the language, 2 letters",
        "type": "text"
    },
    "export_details": "Export the current configuration and saved data",
    "export_string": "Export",
    "import_details": "Import a previously exported backup file",
    "import_error": "There was an error importing your backup.",
    "import_string": "Import",
    "import_success": "Backup imported successfully.",
    "luxembourgish": "Lëtzebuergesch",
    "@luxembourgish": {
        "description": "Do not translate",
        "type": "text"
    },
    "result": "Result",
    "section_general_a3d": "A3D - Architecture, design & sustainable development",
    "section_general_acv": "ACV - Arts & visual communication",
    "section_general_cc": "CC - Communication & organization",
    "section_general_cf": "CF - Finance",
    "section_general_cg": "CG - Management",
    "section_general_cm": "CM - Administrative & commercial",
    "section_general_ed": "ED - Educator training",
    "section_general_gh": "GH - Hospitality management",
    "section_general_ig": "IG - Engineering",
    "section_general_in": "IN - Informatics",
    "section_general_mm": "MM - Marketing, media & communication",
    "section_general_ps": "PS - Health & social professions",
    "section_general_se": "SE - Environmental sciences",
    "section_general_sh": "SH - Health sciences",
    "section_general_si": "SI - Nurse training",
    "section_general_sn": "SN - Natural sciences",
    "section_general_so": "SO - Social sciences",
    "send_feedback": "Give feedback",
    "showcase_drag_subject": "Drag to change subject order",
    "showcase_tap_subject": "Tap here to make the subject above a subject group",
    "spanish": "Español",
    "@spanish": {
        "description": "Do not translate",
        "type": "text"
    },
    "speaking": "Speaking",
    "@speaking": {
        "description": "Attention: \"Speaking\" as in \"oral exam\", not the verb \"to speak\". Make sure to use the appropriate translation.",
        "type": "text"
    },
    "speaking_weight": "Speaking weight",
    "@speaking_weight": {
        "description": "Attention: \"Speaking\" as in \"oral exam\", not the verb \"to speak\". Make sure to use the appropriate translation.",
        "type": "text"
    },
    "variant_classic_l": "L - Latin",
    "variant_classic_zh": "ZH - Chinese",
    "variant_general_a": "A - Continuation of german",
    "variant_general_ad": "AD - Adaptation class",
    "variant_general_adf": "ADF - French adaptation class",
    "variant_general_f": "F - Beginning of german",
    "variant_general_fr": "FR - Francophone regime",
    "variant_general_ia": "IA - Learning german",
    "variant_general_if": "IF - Learning french",
    "variant_general_p": "P - Preparation route",
    "variant_general_pf": "PF - French preparation way",
    "dutch": "Nederlands",
    "@dutch": {
        "description": "Do not translate",
        "type": "text"
    }
}